# betterbook

./: .gitignore  LICENSE.txt  README.md
api_rust/: Cargo.toml
api_rust/src/: auth.rs  db_util.rs  main.rs  models.rs  routes_auth.rs  routes_main.rs  state.rs
api_rust/src/entity/: user.rs
client_svelte/: package-lock.json  package.json
src/: __init__.py  auth.py  models.py
