[package]
name = "api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio", "macros", "schema-sync", "entity-registry"] }
dotenv = { version = "0.15.0", features = ["cli"] }

